2001-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (fontTypeMetrics): New method to support
 	retrieving font metrics.

	* lib/TypeMetric.cpp : New class to support font metrics
 	information.

2001-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Color.h (scaleDoubleToQuantum): Inline static
 	method made from previous ScaleDoubleToQuantum #define.
	(scaleQuantumToDouble): Inline static method made from previous
 	ScaleQuantumToDouble #define. Helps avoid possibility of clash
 	with user code.

2001-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorMap): Automatically extend colormap if
 	specified index is past end of current colormap.  Colormap is
 	still limited to a maximum depth of 256 entries.

2001-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (clipMask): New method to add a clip mask to the
 	image.  Adds clipping to any image operation wherever the clip
 	mask image is tranparent.

2001-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Drawable.cpp (print): Add single quotes around file names
 	and font specifications.

2001-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Ensure that only a single image frame is read.

2001-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (flattenImages): New function to flatten a
 	layered image.

	* lib/Montage.cpp (Montage): Montage initial defaults are no
 	longer drawn from ImageInfo.  MontageInfo structure is entirely
 	filled out by updateMontageInfo();

2001-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Montage.cpp (updateMontageInfo): Bugfix; colors which were
 	intentionally specified as invalid (unset) were being ignored.
  	This produced unattractive label text when doing a montage.

2001-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (medianFilterImage): Changed argument from